Add liveview test

--- a/blink.ipynb
+++ b/blink.ipynb
@@ -294,11 +294,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'command_id': 1776050918,\n",
+       " 'join_available': True,\n",
+       " 'join_state': 'available',\n",
+       " 'server': 'immis://3.74.163.137:443/GlkJbvxsqCfScs-z__IMDS_G8T1GJ0132170WL5?client_id=182',\n",
+       " 'duration': None,\n",
+       " 'extended_duration': 5400,\n",
+       " 'continue_interval': 30,\n",
+       " 'continue_warning': 10,\n",
+       " 'polling_interval': 15,\n",
+       " 'submit_logs': True,\n",
+       " 'new_command': True,\n",
+       " 'media_id': None,\n",
+       " 'options': {}}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print(blink.)"
+    "from blinkpy import api\n",
+    "\n",
+    "\n",
+    "api.request_camera_liveview(blink, 669977, 1121974)"
    ]
   }
  ],
